cabal-version:            2.4
name:                     backend-rewrite
version:                  0.1.0.0
author:                   Udit Karode
maintainer:               udit.karode@gmail.com

executable backend-rewrite
    main-is:              Main.hs

    other-modules:        Database
                        , Wrappers
                        , Routes
                        , Types
                        , Trans
                        , Utils
                        , Cli

    build-depends:        base ^>=4.15.0.0
                        , optparse-applicative
                        , servant-server
                        , sqlite-simple
                        , regex-compat
                        , utf8-string
                        , http-types
                        , bytestring
                        , directory
                        , text-show
                        , iproute
                        , network
                        , servant
                        , hedis
                        , aeson
                        , Cabal
                        , text
                        , warp
                        , wai
                        , mtl

    hs-source-dirs:       app

    default-extensions:   OverloadedStrings
                        , DataKinds
                        , DeriveGeneric
                        , TypeOperators
                        , LambdaCase

    default-language:     Haskell2010
